# -Imitation-Engine

./: Cargo.toml  README.md  SYSTEM_PROMPT.txt  descension.skill  descension_engine_v2.2_patched (2).md  descension_engine_v2.2_patched.md  lib.rs  lib.rs.rs  クロードAI手順.txt
skill/: SKILL.md
skill/agents/: openai.yaml
skill/skill/references/: activation-and-departure.md  companions-and-fallbacks.md  kernel-and-phases.md  multi-character.md  vasana.md
